<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.anuja.reall.AttributesActivity"
    tools:showIn="@layout/activity_attributes">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/relativelayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/heximage"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">




            <TextView
                android:id="@+id/selectattr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="12dp"
                android:text="@string/selectattr"
                android:textColor="@color/white"
                android:textStyle="bold" />



            <TextView
                android:id="@+id/txtgender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:layout_marginTop="8dp"
                android:padding="5dp"
                android:textColor="@color/white"
                android:layout_below="@+id/selectattr"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/txtgender"
                android:id="@+id/radiogroup1"
                >

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtgender"
                    android:layout_margin="5dp"
                    android:buttonTint="@color/colorRadioButton"
                    android:padding="5dp"
                    android:shadowColor="@color/white"
                    android:text="Male"
                    android:textColor="@color/white" />



                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtgender"
                    android:layout_margin="5dp"
                    android:layout_toRightOf="@id/male"
                    android:buttonTint="@color/colorRadioButton"
                    android:padding="5dp"
                    android:shadowColor="@color/white"
                    android:text="Female"
                    android:textColor="@color/white" />

            </RadioGroup>


            <TextView
                android:id="@+id/txtlocale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/radiogroup1"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:text="@string/locale"
                android:textColor="@color/white" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radiogroup2"
                android:layout_below="@+id/txtlocale"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/urban"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtlocale"
                    android:layout_margin="5dp"
                    android:buttonTint="@color/colorRadioButton"
                    android:padding="5dp"
                    android:shadowColor="@color/white"
                    android:text="@string/urban"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/rural"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtlocale"
                    android:layout_margin="5dp"
                    android:layout_toRightOf="@id/urban"
                    android:buttonTint="@color/colorRadioButton"
                    android:padding="5dp"
                    android:shadowColor="@color/white"
                    android:text="Rural"
                    android:textColor="@color/white" />
            </RadioGroup>



            <TextView
                android:id="@+id/txtpotentialA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/radiogroup2"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="15dp"
                android:padding="5dp"
                android:text="@string/potential_attributes"
                android:textColor="@color/white" />


            <TableLayout
                android:id="@+id/table"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtpotentialA"
                android:stretchColumns="2">

                <TableRow>

                    <TextView
                        android:id="@+id/health"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/health"
                        android:textColor="@color/white" />

                    <SeekBar
                        android:id="@+id/SeekBar1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"

                        />
                </TableRow>


                <TableRow>

                    <TextView
                        android:id="@+id/resïstance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/resistance"
                        android:textColor="@color/white" />

                    <SeekBar
                        android:id="@+id/SeekBar2"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1" />
                </TableRow>


                <TableRow>

                    <TextView
                        android:id="@+id/happiness"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/happiness"
                        android:textColor="@color/white" />

                    <SeekBar
                        android:id="@+id/SeekBar3"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/intelligence"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/intelligence"
                        android:textColor="@color/white" />

                    <SeekBar
                        android:id="@+id/SeekBar4"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1" />
                </TableRow>


                <TableRow>

                    <TextView
                        android:id="@+id/artistic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/artistic"
                        android:textColor="@color/white" />

                    <SeekBar
                        android:id="@+id/SeekBar5"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"

                        />
                </TableRow>


                <TableRow>

                    <TextView
                        android:id="@+id/musical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/musical"
                        android:textColor="@color/white" />

                    <SeekBar
                        android:id="@+id/SeekBar6"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"

                        />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/athletic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/athletic"
                        android:textColor="@color/white" />

                    <SeekBar
                        android:id="@+id/SeekBar7"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/strength"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/strength"
                        android:textColor="@color/white" />

                    <SeekBar
                        android:id="@+id/SeekBar8"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/physical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/phys_endurance"
                        android:textColor="@color/white" />

                    <SeekBar
                        android:id="@+id/SeekBar9"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/spiritual"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/spiritual"
                        android:textColor="@color/white" />

                    <SeekBar
                        android:id="@+id/SeekBar10"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/goodlooks"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/goodlooks"
                        android:textColor="@color/white" />

                    <SeekBar
                        android:id="@+id/SeekBar11"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1" />
                </TableRow>


            </TableLayout>

            <Button
                android:id="@+id/Backbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_margin="5dp"
                android:layout_toLeftOf="@+id/selectattrbutton"
                android:background="@drawable/buttonstyle"
                android:layout_below="@+id/linearlayout1"
                android:text="@string/back"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/selectNameButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_margin="5dp"
                android:background="@drawable/buttonstyle"
                android:layout_below="@+id/linearlayout1"
                android:onClick="toFirstName"

                android:text="@string/selectname"
                android:textColor="@color/white" />

        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
