<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backblue"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.anuja.reall.Selectcity"
    tools:showIn="@layout/activity_selectcity">
    <RelativeLayout
        android:id="@+id/relativelayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/heximage"
        android:padding="10dp"
        android:orientation="vertical"
        >


        <TextView
            android:id="@+id/selectacity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_a_city"
            android:layout_margin="2dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:padding="12dp" />


        <Button
            android:id="@+id/Backbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/selectattrbutton"
            android:background="@drawable/buttonstyle"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            android:text="@string/back"
            android:onClick="toselectcountry"/>

        <Button
            android:id="@+id/selectattrbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="5dp"
            android:background="@drawable/buttonstyle"
            android:textColor="@color/white"
            android:text="@string/selectattr"
            android:onClick="toselectattr"/>


        <ScrollView
            android:id="@+id/scrollview_choices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:layout_below="@id/selectacity"
            android:layout_above="@id/Backbutton"
            >

            <RadioGroup
                android:id="@+id/choices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                >

            </RadioGroup>
        </ScrollView>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
