<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1C355B"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.anuja.reall.DesignALife"
    tools:showIn="@layout/activity_designalife">






    <RelativeLayout
        android:id="@+id/relativelayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/heximage"
        android:padding="10dp"
        android:orientation="vertical"
        >


        <TextView
            android:id="@+id/selectac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_a_country"
            android:layout_margin="2dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:padding="12dp" />


        <Button
            android:id="@+id/playlifebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/selectcitybutton"
            android:background="@drawable/buttonstyle"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            android:text="@string/back"
            android:onClick="tomainactivity"/>

        <Button
            android:id="@+id/selectcitybutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="5dp"
            android:background="@drawable/buttonstyle"
            android:textColor="@color/white"
            android:text="@string/selectcity"
            android:onClick="goto_selectcity"/>


        <ScrollView
            android:id="@+id/scrollview_choices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:layout_below="@id/selectac"
            android:layout_above="@id/playlifebutton"
            >

            <RadioGroup
                android:id="@+id/choices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"

                >

            </RadioGroup>
        </ScrollView>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
