<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1C355B"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.anuja.reall.ActivityFirstName"
    tools:showIn="@layout/content_first_name">




    <RelativeLayout
        android:id="@+id/relativelayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/heximage"
        android:orientation="vertical"
        android:padding="10dp">


        <TextView
            android:id="@+id/selectac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:padding="12dp"
            android:text="@string/selectname"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/nameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="ENTER NAME OF YOUR CHOICE"
            android:layout_below="@+id/selectac"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorPureWhite"
            android:textColorHint="@color/colorPureWhite"
            android:backgroundTint="@color/colorPureWhite"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="43dp" />


        <Button
            android:id="@+id/selectcitybutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="5dp"
            android:layout_toLeftOf="@+id/selectlastname"
            android:background="@drawable/buttonstyle"
            android:onClick="toselectcity"
            android:text="@string/selectcity"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/selectlastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="5dp"
            android:background="@drawable/buttonstyle"
            android:onClick="toSelectLastName"
            android:text="@string/selectlastname"
            android:textColor="@color/white"
            />



        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_above="@id/selectlastname"
            android:layout_below="@+id/nameText"
            android:id="@+id/recycler_firstname"
            android:scrollbars="vertical"/>

    </RelativeLayout>



</RelativeLayout>
